fix: Add fix for the scrollbar

--- a/src/podcasts/podcast.modules.css
+++ b/src/podcasts/podcast.modules.css
@@ -140,7 +140,7 @@
 .featured {
     width: 70%;
     height: 600px;
-    overflow: scroll;
+    overflow-y: scroll;
     margin-inline: auto;
 }
 .featured-container {
